--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,18 +1,33 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    android:orientation="vertical"
+    android:padding="15dp"
+    android:background="?attr/colorPrimary">
 
     <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-</androidx.constraintlayout.widget.ConstraintLayout>
+        android:id="@+id/main_header"
+        style="@style/TitleTextStyleMain"
+        android:text="@string/main_menu_header"
+        />
+    <Button
+        android:id="@+id/btn_find_am"
+        style="@style/ButtonStyle"
+        android:text="@string/btn_find_text"
+        app:icon="@drawable/ic_fnd"
+        />
+    <Button
+        android:id="@+id/btn_media_am"
+        style="@style/ButtonStyle"
+        android:text="@string/btn_media_text"
+        app:icon="@drawable/ic_mediateka"
+        />
+    <Button
+        android:id="@+id/btn_settings_am"
+        style="@style/ButtonStyle"
+        android:text="@string/btn_settings_text"
+        app:icon="@drawable/ic_sttngs"
+        />
+</LinearLayout>
