--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,7 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="black_element">#1A1B22</color>
+    <color name="gray_element">#AEAFB4</color>
+    <color name="gray_light">#E6E8EB</color>
 </resources>
