--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -112,6 +112,12 @@
         <item name="android:layout_alignParentRight">true</item>
         <item name="android:layout_centerInParent">true</item>
     </style>
-
+    <style name="SearchRefreshButton" parent="Widget.MaterialComponents.Button.UnelevatedButton">
+        <item name="backgroundTint">?attr/colorOnSecondary</item>
+        <item name="android:textColor">?attr/colorOnPrimary</item>
+        <item name="fontFamily">@font/ys_display_medium</item>
+        <item name="android:textSize">@dimen/tl_text_size</item>
+        <item name="android:textAllCaps">false</item>
+     </style>
 </resources>
 
