--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -113,11 +113,18 @@
         <item name="android:layout_centerInParent">true</item>
     </style>
     <style name="SearchRefreshButton" parent="Widget.MaterialComponents.Button.UnelevatedButton">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
         <item name="backgroundTint">?attr/colorOnSecondary</item>
         <item name="android:textColor">?attr/colorOnPrimary</item>
         <item name="fontFamily">@font/ys_display_medium</item>
         <item name="android:textSize">@dimen/tl_text_size</item>
         <item name="android:textAllCaps">false</item>
+        <item name="cornerRadius">@dimen/bt_corner</item>
+        <item name="android:layout_marginTop">@dimen/twenty_four</item>
+        <item name="android:layout_gravity">center_horizontal</item>
      </style>
+
+    <dimen name="bt_corner">54sp</dimen>
 </resources>
 
