--- a/app/src/main/res/layout/activity_find.xml
+++ b/app/src/main/res/layout/activity_find.xml
@@ -58,6 +58,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:layout_marginTop="112dp"
+        android:backgroundTint="@color/white"
         android:visibility="gone" />
     <TextView
         android:id="@+id/placeholderMessage"
