--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -15,4 +15,5 @@
     <dimen name="edit_text_min_height">48dp</dimen>
     <dimen name="header_bottom_padding">40dp</dimen>
     <dimen name="tl_image_view_size">36dp</dimen>
+    <dimen name="bt_corner">54sp</dimen>
 </resources>
