--- a/app/src/main/res/values-night/styles.xml
+++ b/app/src/main/res/values-night/styles.xml
@@ -75,11 +75,16 @@
     </style>
 
     <style name="SwitchStyle">
-        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_marginStart">16dp</item>
+        <item name="android:layout_marginTop">60dp</item>
         <item name="android:layout_marginEnd">20dp</item>
+        <item name="android:layout_gravity">start</item>
+        <item name="android:textSize">16sp</item>
+        <item name="android:fontFamily">@font/ys_display_regular</item>
+        <item name="android:textColor">?attr/colorOnSecondary</item>
     </style>
-
     <style name="edit_text_find">
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">wrap_content</item>
