--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -144,17 +144,15 @@
     </style>
 
     <style name="PlayerTrackPropertyValue">
-        <item name="android:layout_width">0dp</item>
+        <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
-        <item name="layout_constraintEnd_toEndOf">parent</item>
         <item name="android:layout_marginStart">@dimen/sixteen</item>
         <item name="android:layout_marginEnd">@dimen/sixteen</item>
-        <item name="android:textColor">@color/theme_hard_text_color</item>
+        <item name="android:textColor">@color/black</item>
         <item name="android:textSize">@dimen/as_text_size</item>
         <item name="fontFamily">@font/ys_display_regular</item>
         <item name="android:maxLines">1</item>
         <item name="android:singleLine">true</item>
-        <item name="android:gravity">end</item>
     </style>
 
 </resources>
