--- a/app/src/main/res/layout/activity_player.xml
+++ b/app/src/main/res/layout/activity_player.xml
@@ -3,30 +3,16 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".PlayerActivity">
-
-    <androidx.constraintlayout.widget.Guideline
-        android:id="@+id/player_left_guideline"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        app:layout_constraintGuide_begin="@dimen/twenty_four" />
-
-    <androidx.constraintlayout.widget.Guideline
-        android:id="@+id/player_right_guideline"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        app:layout_constraintGuide_end="@dimen/twenty_four" />
+    android:layout_height="match_parent">
 
     <ImageButton
         android:id="@+id/player_back_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_margin="5dp"
+        android:layout_margin="6dp"
+        android:layout_marginStart="40dp"
+        android:layout_marginTop="440dp"
         android:background="@null"
-        android:contentDescription="@string/app_name"
         android:minWidth="48dp"
         android:minHeight="48dp"
         app:layout_constraintStart_toStartOf="parent"
@@ -34,162 +20,182 @@
         app:srcCompat="@drawable/arrowback" />
 
     <ImageView
-        android:id="@+id/player_artwork"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
+        android:id="@+id/imageView"
+        android:layout_width="512px"
+        android:layout_height="512px"
         android:layout_marginTop="56dp"
-        android:layout_marginBottom="24dp"
-        android:contentDescription="@string/app_name"
+        android:layout_marginStart="@dimen/twenty_four"
+        android:layout_marginEnd="@dimen/twenty_four"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="@id/player_left_guideline"
-        app:layout_constraintEnd_toEndOf="@id/player_right_guideline"
-        app:layout_constraintBottom_toTopOf="@id/player_track_name"
-        tools:src="@drawable/album"/>
-
-    <TextView style="@style/PlayerTrackPropertyTitle"
-        android:id="@+id/player_track_property_country"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        android:layout_marginBottom="28dp"
-        android:text="@string/player_track_property_country"/>
-
-    <TextView style="@style/PlayerTrackPropertyTitle"
-        android:id="@+id/player_track_property_genre"
-        app:layout_constraintBottom_toTopOf="@id/player_track_property_country"
-        app:layout_constraintStart_toStartOf="parent"
-        android:text="@string/player_track_property_style"/>
-
-    <TextView style="@style/PlayerTrackPropertyTitle"
-        android:id="@+id/player_track_property_release"
-        app:layout_constraintBottom_toTopOf="@id/player_track_property_genre"
-        app:layout_constraintStart_toStartOf="parent"
-        android:text="@string/player_track_property_release"/>
-
-    <TextView style="@style/PlayerTrackPropertyTitle"
-        android:id="@+id/player_track_property_album"
-        app:layout_constraintBottom_toTopOf="@id/player_track_property_release"
-        app:layout_constraintStart_toStartOf="parent"
-        android:text="@string/player_track_property_album"/>
-
-    <TextView style="@style/PlayerTrackPropertyTitle"
-        android:id="@+id/player_track_property_length"
-        app:layout_constraintBottom_toTopOf="@id/player_track_property_album"
-        app:layout_constraintStart_toStartOf="parent"
-        android:text="@string/player_track_property_length"/>
+        app:srcCompat="@drawable/album" />
 
     <TextView
-        android:id="@+id/player_track_property_length_plus"
-        style="@style/PlayerTrackPropertyValue"
-        android:text="5:35"
-        android:layout_marginEnd="@dimen/sixteen"
-        app:layout_constraintHorizontal_bias="1"
+        android:id="@+id/textView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:text="Yersterday (Remastered 2009)"
+        android:textSize="@dimen/twenty_four"
+        android:layout_marginStart="@dimen/twenty_four"
+        android:layout_marginEnd="@dimen/twenty_four"
+        app:layout_constraintHorizontal_bias="0"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="@id/player_track_property_length"
-        app:layout_constraintStart_toEndOf="@id/player_track_property_length" />
-
-    <TextView style="@style/PlayerTrackPropertyValue"
-        android:id="@+id/player_track_value_country"
-        app:layout_constraintBottom_toBottomOf="@id/player_track_property_country"
-        app:layout_constraintEnd_toEndOf="parent"
-        tools:text="Великобритания"/>
-
-    <TextView style="@style/PlayerTrackPropertyValue"
-        android:id="@+id/player_track_value_genre"
-        app:layout_constraintBottom_toBottomOf="@id/player_track_property_genre"
-        app:layout_constraintEnd_toEndOf="parent"
-        tools:text="Rock"/>
-
-    <TextView style="@style/PlayerTrackPropertyValue"
-        android:id="@+id/player_track_value_release"
-        app:layout_constraintBottom_toBottomOf="@id/player_track_property_release"
-        app:layout_constraintEnd_toEndOf="parent"
-        tools:text="1965"/>
+        app:layout_constraintTop_toBottomOf="@+id/imageView" />
 
     <TextView
-        android:id="@+id/player_track_value_album"
-        style="@style/PlayerTrackPropertyValue"
-        app:layout_constraintBottom_toBottomOf="@id/player_track_property_album"
+        android:id="@+id/textView2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="4dp"
+        android:layout_marginStart="@dimen/twenty_four"
+        android:layout_marginEnd="@dimen/twenty_four"
+        android:text="The Beatles"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/player_track_property_album"
-        tools:text="Yesterday (Remastered 2009)" />
-
+        app:layout_constraintHorizontal_bias="0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView"/>
     <ImageButton
-        android:id="@+id/player_play_button"
+        android:id="@+id/player_add_to_playlist_butto"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="68dp"
-        android:background="@null"
-        android:contentDescription="@string/as_header_text"
-        android:src="@drawable/btn_play"
-        app:layout_constraintBottom_toTopOf="@id/player_track_property_length"
-
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
-
-    <TextView
-        android:id="@+id/player_track_timer"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="12dp"
-        android:fontFamily="@font/ys_display_medium"
-        android:textSize="14sp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/player_play_button"
-        android:textColor="?attr/colorOnSecondary"
-        tools:text="0:30"/>
-
-    <ImageButton
-        android:id="@+id/player_add_to_playlist_button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/sixteen"
+        android:layout_marginTop="@dimen/twenty_four"
+        android:layout_marginStart="@dimen/twenty_four"
         android:background="@null"
         android:contentDescription="@string/as_header_text"
         android:src="@drawable/btn_add_to_playlist"
-        app:layout_constraintStart_toStartOf="@id/player_left_guideline"
-        app:layout_constraintTop_toTopOf="@id/player_play_button" />
+        app:layout_constraintTop_toBottomOf="@id/textView2"
+        app:layout_constraintStart_toStartOf="parent"
+       />
 
     <ImageButton
-        android:id="@+id/player_add_to_favorites_button"
+        android:id="@+id/player_play_butto"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/sixteen"
+        android:layout_margin="@dimen/sixteen"
+        android:background="@null"
+        android:contentDescription="@string/as_header_text"
+        android:src="@drawable/btn_play"
+        app:layout_constraintBottom_toBottomOf="@+id/player_add_to_playlist_butto"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/player_add_to_playlist_butto"/>
+
+    <ImageButton
+        android:id="@+id/player_add_to_favorites_butto"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="@dimen/twenty_four"
         android:background="@null"
         android:contentDescription="@string/as_header_text"
         android:src="@drawable/btn_add_to_favorites"
-        app:layout_constraintEnd_toEndOf="@id/player_right_guideline"
-        app:layout_constraintTop_toTopOf="@id/player_play_button" />
+        app:layout_constraintBottom_toBottomOf="@+id/player_play_butto"
+        app:layout_constraintTop_toTopOf="@+id/player_play_butto"
+        app:layout_constraintEnd_toEndOf="parent" />
 
     <TextView
-        android:id="@+id/player_artist_name"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="36dp"
-        android:fontFamily="@font/ys_display_medium"
-        android:textSize="14sp"
-        android:maxLines="1"
-        android:singleLine="true"
-        app:layout_constraintStart_toStartOf="@id/player_left_guideline"
-        app:layout_constraintBottom_toTopOf="@id/player_play_button"
-        app:layout_constraintEnd_toStartOf="@id/player_right_guideline"
-        android:textColor="?attr/colorOnSecondary"
-        tools:text="The Beatles"/>
+        android:id="@+id/player_track_property_length_pl"
+        style="@style/PlayerTrackPropertyValue"
+        android:layout_marginTop="24dp"
+        android:text="5:35"
+        app:layout_constraintEnd_toEndOf="@+id/player_play_butto"
+        app:layout_constraintHorizontal_bias="0.49"
+        app:layout_constraintStart_toStartOf="@+id/player_play_butto"
+        app:layout_constraintTop_toBottomOf="@+id/player_play_butto" />
 
     <TextView
-        android:id="@+id/player_track_name"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="12dp"
-        android:fontFamily="@font/ys_display_medium"
-        android:textSize="22sp"
-        android:maxLines="1"
-        android:singleLine="true"
-        app:layout_constraintStart_toStartOf="@id/player_left_guideline"
-        app:layout_constraintEnd_toStartOf="@id/player_right_guideline"
-        app:layout_constraintBottom_toTopOf="@id/player_artist_name"
-        android:textColor="?attr/colorOnSecondary"
-        tools:text="Yesterday (Remastered 2009)"/>
+        android:id="@+id/player_track_value_albu"
+        style="@style/PlayerTrackPropertyTitle"
+        android:layout_marginStart="@dimen/sixteen"
+        android:layout_marginTop="@dimen/twenty_four"
+        android:text="Длительность"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/player_track_property_length_pl" />
+
+    <TextView
+        android:id="@+id/player_track_property_length_plu"
+        style="@style/PlayerTrackPropertyValue"
+        android:layout_marginEnd="@dimen/sixteen"
+        android:text="5:35"
+        app:layout_constraintBottom_toBottomOf="@+id/player_track_value_albu"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/player_track_value_albu" />
+
+    <TextView
+        android:id="@+id/player_track_property_albu"
+        style="@style/PlayerTrackPropertyTitle"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"
+        android:text="@string/player_track_property_album"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/player_track_value_albu" />
+
+    <TextView
+        android:id="@+id/player_track_value_al"
+        style="@style/PlayerTrackPropertyValue"
+        android:layout_marginEnd="16dp"
+        android:text="Yesterday(Remastered 2009)"
+        app:layout_constraintBottom_toBottomOf="@+id/player_track_property_albu"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/player_track_property_albu" />
+
+    <TextView
+        android:id="@+id/player_track_property_releas"
+        style="@style/PlayerTrackPropertyTitle"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"
+        android:text="@string/player_track_property_release"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/player_track_property_albu" />
+
+    <TextView
+        android:id="@+id/player_track_value_releas"
+        style="@style/PlayerTrackPropertyValue"
+        android:layout_marginEnd="16dp"
+        android:text="1965"
+        app:layout_constraintBottom_toBottomOf="@+id/player_track_property_releas"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/player_track_property_releas" />
+
+    <TextView
+        android:id="@+id/player_track_property_genr"
+        style="@style/PlayerTrackPropertyTitle"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"
+        android:text="@string/player_track_property_style"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/player_track_property_releas" />
+
+    <TextView
+        android:id="@+id/player_track_value_genr"
+        style="@style/PlayerTrackPropertyValue"
+        android:layout_marginEnd="16dp"
+        android:text="Rock"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/player_track_property_genr"
+        app:layout_constraintBottom_toBottomOf="@+id/player_track_property_genr"/>
+
+    <TextView
+        android:id="@+id/player_track_property_countr"
+        style="@style/PlayerTrackPropertyTitle"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"
+        android:text="@string/player_track_property_country"
+        app:layout_constraintTop_toBottomOf="@+id/player_track_property_genr"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <TextView
+        android:id="@+id/player_track_value_countr"
+        style="@style/PlayerTrackPropertyValue"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="16dp"
+        android:text="Великобритания"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toBottomOf="@+id/player_track_property_countr"
+        app:layout_constraintTop_toTopOf="@+id/player_track_property_countr"
+        app:layout_constraintVertical_bias="1.0" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
-
