--- a/app/src/main/res/layout/activity_player.xml
+++ b/app/src/main/res/layout/activity_player.xml
@@ -20,7 +20,7 @@
         app:srcCompat="@drawable/arrowback" />
 
     <ImageView
-        android:id="@+id/imageView"
+        android:id="@+id/playerTrackCover"
         android:layout_width="512px"
         android:layout_height="512px"
         android:layout_marginTop="56dp"
@@ -32,7 +32,7 @@
         app:srcCompat="@drawable/album" />
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/playerTrackName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
@@ -43,10 +43,10 @@
         app:layout_constraintHorizontal_bias="0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView" />
+        app:layout_constraintTop_toBottomOf="@+id/playerTrackCover" />
 
     <TextView
-        android:id="@+id/textView2"
+        android:id="@+id/playerTrackArtist"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="4dp"
@@ -56,9 +56,9 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView"/>
+        app:layout_constraintTop_toBottomOf="@+id/playerTrackName"/>
     <ImageButton
-        android:id="@+id/player_add_to_playlist_butto"
+        android:id="@+id/playerAddToPlaylistBtn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/twenty_four"
@@ -66,135 +66,135 @@
         android:background="@null"
         android:contentDescription="@string/as_header_text"
         android:src="@drawable/btn_add_to_playlist"
-        app:layout_constraintTop_toBottomOf="@id/textView2"
+        app:layout_constraintTop_toBottomOf="@id/playerTrackArtist"
         app:layout_constraintStart_toStartOf="parent"
        />
 
     <ImageButton
-        android:id="@+id/player_play_butto"
+        android:id="@+id/playerPlayBtn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/sixteen"
         android:background="@null"
         android:contentDescription="@string/as_header_text"
         android:src="@drawable/btn_play"
-        app:layout_constraintBottom_toBottomOf="@+id/player_add_to_playlist_butto"
+        app:layout_constraintBottom_toBottomOf="@+id/playerAddToPlaylistBtn"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/player_add_to_playlist_butto"/>
+        app:layout_constraintTop_toTopOf="@+id/playerAddToPlaylistBtn"/>
 
     <ImageButton
-        android:id="@+id/player_add_to_favorites_butto"
+        android:id="@+id/playerAddToFavoritesBtn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="@dimen/twenty_four"
         android:background="@null"
         android:contentDescription="@string/as_header_text"
         android:src="@drawable/btn_add_to_favorites"
-        app:layout_constraintBottom_toBottomOf="@+id/player_play_butto"
-        app:layout_constraintTop_toTopOf="@+id/player_play_butto"
+        app:layout_constraintBottom_toBottomOf="@+id/playerPlayBtn"
+        app:layout_constraintTop_toTopOf="@+id/playerPlayBtn"
         app:layout_constraintEnd_toEndOf="parent" />
 
     <TextView
-        android:id="@+id/player_track_property_length_pl"
+        android:id="@+id/playerTrackDurationLive"
         style="@style/PlayerTrackPropertyValue"
         android:layout_marginTop="24dp"
         android:text="5:35"
-        app:layout_constraintEnd_toEndOf="@+id/player_play_butto"
+        app:layout_constraintEnd_toEndOf="@+id/playerPlayBtn"
         app:layout_constraintHorizontal_bias="0.49"
-        app:layout_constraintStart_toStartOf="@+id/player_play_butto"
-        app:layout_constraintTop_toBottomOf="@+id/player_play_butto" />
+        app:layout_constraintStart_toStartOf="@+id/playerPlayBtn"
+        app:layout_constraintTop_toBottomOf="@+id/playerPlayBtn" />
 
     <TextView
-        android:id="@+id/player_track_value_albu"
+        android:id="@+id/playerTrackDurationText"
         style="@style/PlayerTrackPropertyTitle"
         android:layout_marginStart="@dimen/sixteen"
         android:layout_marginTop="@dimen/twenty_four"
         android:text="Длительность"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/player_track_property_length_pl" />
+        app:layout_constraintTop_toBottomOf="@+id/playerTrackDurationLive" />
 
     <TextView
-        android:id="@+id/player_track_property_length_plu"
+        android:id="@+id/playerTrackDuration"
         style="@style/PlayerTrackPropertyValue"
         android:layout_marginEnd="@dimen/sixteen"
         android:text="5:35"
-        app:layout_constraintBottom_toBottomOf="@+id/player_track_value_albu"
+        app:layout_constraintBottom_toBottomOf="@+id/playerTrackDurationText"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/player_track_value_albu" />
+        app:layout_constraintTop_toTopOf="@+id/playerTrackDurationText" />
 
     <TextView
-        android:id="@+id/player_track_property_albu"
+        android:id="@+id/playerTrackAlbumText"
         style="@style/PlayerTrackPropertyTitle"
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
         android:text="@string/player_track_property_album"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/player_track_value_albu" />
+        app:layout_constraintTop_toBottomOf="@+id/playerTrackDurationText" />
 
     <TextView
-        android:id="@+id/player_track_value_al"
+        android:id="@+id/playerTrackNameTwo"
         style="@style/PlayerTrackPropertyValue"
         android:layout_marginEnd="16dp"
         android:text="Yesterday(Remastered 2009)"
-        app:layout_constraintBottom_toBottomOf="@+id/player_track_property_albu"
+        app:layout_constraintBottom_toBottomOf="@+id/playerTrackAlbumText"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/player_track_property_albu" />
+        app:layout_constraintTop_toTopOf="@+id/playerTrackAlbumText" />
 
     <TextView
-        android:id="@+id/player_track_property_releas"
+        android:id="@+id/playerTrackYearText"
         style="@style/PlayerTrackPropertyTitle"
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
         android:text="@string/player_track_property_release"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/player_track_property_albu" />
+        app:layout_constraintTop_toBottomOf="@+id/playerTrackAlbumText" />
 
     <TextView
-        android:id="@+id/player_track_value_releas"
+        android:id="@+id/playerTrackYear"
         style="@style/PlayerTrackPropertyValue"
         android:layout_marginEnd="16dp"
         android:text="1965"
-        app:layout_constraintBottom_toBottomOf="@+id/player_track_property_releas"
+        app:layout_constraintBottom_toBottomOf="@+id/playerTrackYearText"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/player_track_property_releas" />
+        app:layout_constraintTop_toTopOf="@+id/playerTrackYearText" />
 
     <TextView
-        android:id="@+id/player_track_property_genr"
+        android:id="@+id/playerTrackGenreText"
         style="@style/PlayerTrackPropertyTitle"
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
         android:text="@string/player_track_property_style"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/player_track_property_releas" />
+        app:layout_constraintTop_toBottomOf="@+id/playerTrackYearText" />
 
     <TextView
-        android:id="@+id/player_track_value_genr"
+        android:id="@+id/playerTrackGenre"
         style="@style/PlayerTrackPropertyValue"
         android:layout_marginEnd="16dp"
         android:text="Rock"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/player_track_property_genr"
-        app:layout_constraintBottom_toBottomOf="@+id/player_track_property_genr"/>
+        app:layout_constraintTop_toTopOf="@+id/playerTrackGenreText"
+        app:layout_constraintBottom_toBottomOf="@+id/playerTrackGenreText"/>
 
     <TextView
-        android:id="@+id/player_track_property_countr"
+        android:id="@+id/playerTrackCountryText"
         style="@style/PlayerTrackPropertyTitle"
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
         android:text="@string/player_track_property_country"
-        app:layout_constraintTop_toBottomOf="@+id/player_track_property_genr"
+        app:layout_constraintTop_toBottomOf="@+id/playerTrackGenreText"
         app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
-        android:id="@+id/player_track_value_countr"
+        android:id="@+id/playerTrackCountry"
         style="@style/PlayerTrackPropertyValue"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="16dp"
         android:text="Великобритания"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toBottomOf="@+id/player_track_property_countr"
-        app:layout_constraintTop_toTopOf="@+id/player_track_property_countr"
+        app:layout_constraintBottom_toBottomOf="@+id/playerTrackCountryText"
+        app:layout_constraintTop_toTopOf="@+id/playerTrackCountryText"
         app:layout_constraintVertical_bias="1.0" />
 
 
