Переделал получение трека

--- a/app/src/main/res/layout/activity_find.xml
+++ b/app/src/main/res/layout/activity_find.xml
@@ -2,7 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
     android:padding="@dimen/as_margin">
@@ -74,7 +74,7 @@
         android:layout_gravity="center"
         android:indeterminateTint="@color/black"
         android:visibility="gone"/>
-
+</FrameLayout>
     <ImageView
         android:id="@+id/statusImage"
         android:layout_width="wrap_content"
@@ -94,7 +94,6 @@
         android:textColor="?attr/colorOnSecondary"
         android:textSize="@dimen/tl_text_size"
         android:textStyle="bold" />
-</FrameLayout>
         <Button
             android:id="@+id/btnUpdate"
             style="@style/SearchRefreshButton"
