Переделал экран поиска и экран плеера под MVP

--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -45,7 +45,7 @@
             android:text="@string/btn_clear" />
     </FrameLayout>
     <TextView
-        android:id="@+id/recent_tracks_title"
+        android:id="@+id/history_tracks_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
