--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -12,4 +12,5 @@
     <color name="gray_light">#E6E8EB</color>
 
     <color name="tint_if_theme">#FFFFFFFF</color>
+    <color name="white_or_black">#FF000000</color>
 </resources>
